fixed sidebar close button not appearing on smaller screen

--- a/src/styles/componentStyles/componentStyles.scss
+++ b/src/styles/componentStyles/componentStyles.scss
@@ -83,6 +83,10 @@
     justify-content: center;
 }
 
+.block{
+    height: 100px;
+}
+
 .sidebar button{
     margin-top: 10px;
     font-family: "Montserrat", sans-serif;
